--- a/Backend/package.json
+++ b/Backend/package.json
@@ -31,6 +31,7 @@
     "nodemailer": "^7.0.6",
     "path": "^0.12.7",
     "paypal-rest-sdk": "^1.8.1",
+    "serverless-http": "^4.0.0",
     "socket.io": "^4.8.1",
     "stripe": "^18.4.0"
   },
